Adding DfpEnvironment parameter

--- a/samples/Dynamics-Fraud-Protection/policies/appsettings.sample.json
+++ b/samples/Dynamics-Fraud-Protection/policies/appsettings.sample.json
@@ -19,6 +19,7 @@
                 "ContentDefinitionBaseUri": "<YOUR-UI-TEMPLATES-BASE-URI>",
 
                 "DfpApiBaseUrl": "https://<YOUR-DFP-INSTANCE-SUBDOMAIN>.api.dfp.dynamics.com/v1.0/",
+                "DfpEnvironment": "<YOUR-DFP-ENVIRONMENT-ID>",
                 "DfpApiAuthScope": "https://api.dfp.dynamics.com/.default",
                 "DfpTenantId": "<YOUR-DFP-TENANT-ID>",
                 "DfpAppClientIdKeyContainer": "B2C_1A_DFPClientId",
